// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurrencyQoutes component tests should match snapshot 1`] = `
<section
  className="quotes__container"
>
  <p
    className="quotes__title title"
  >
    Quotes
  </p>
  <div
    className="title__border"
  />
  <div
    className="quotes__items"
  />
</section>
`;

exports[`CurrencyQoutes component tests snapshot matches 1`] = `
<DocumentFragment>
  <section
    class="quotes__container"
  >
    <p
      class="quotes__title title"
    >
      Quotes
    </p>
    <div
      class="title__border"
    />
    <div
      class="quotes__items"
    />
  </section>
</DocumentFragment>
`;
